--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Andrea Graglia",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.6.4",
     "morgan": "^1.10.0"
